// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemList when data is empty 1`] = `
<div
  className="sc-bdvvaa MoxAp"
/>
`;

exports[`ItemList when data is filled 1`] = `
<div
  className="sc-bdvvaa MoxAp"
>
  ItemMockedComponent
  ItemMockedComponent
  ItemMockedComponent
</div>
`;

exports[`ItemList when data is not fetched yet 1`] = `
<div
  className="sc-bdvvaa MoxAp"
>
  <div
    className="sc-gsDJrp fyNeOs"
  >
    <div
      className="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
      role="progressbar"
      style={
        Object {
          "height": 40,
          "width": 40,
        }
      }
    >
      <svg
        className="MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          className="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
          cx={44}
          cy={44}
          fill="none"
          r={20.2}
          strokeWidth={3.6}
          style={Object {}}
        />
      </svg>
    </div>
  </div>
</div>
`;
